# funer

./: .gitignore  README.md  pyproject.toml
examples/: example.ipynb  example_jp.ipynb
funer/: document.py  entity_span.py  labeling_function_applier.py  utils.py
funer/aggregators/: majority_voting_aggregators.py
funer/annotators/: base_annotator.py  dictionary_annotator.py  span_condition_annotator.py  token_condition_annotator.py
funer/converters/: sequence_label_to_sequence_label.py  sequence_label_to_span_labels_converter.py  span_labels_to_sequence_label_converter.py  utils.py
tests/: test_document.py  test_function_labeling_applyer.py  test_utils.py
tests/aggregators/: test_majority_voting_aggregators.py
tests/annotators/: test_dictionary_annotator.py  test_span_condition_annotator.py  test_token_condition_annotator.py
tests/converters/: test_sequence_label_to_sequence_label.py  test_sequence_label_to_span_labels_converter.py  test_span_labels_to_sequence_label_converter.py
